# face-match

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.js  build-all-and-run.sh  build-client.sh  build-cmake.sh  build-container.sh  dnn_mloi_train.cpp  face-carve-investigate.ipynb  init.sh  package.json  requirements.txt  reset.sh  run.sh  watch_faces.cpp  watch_uploads.py
client/: after-install.js  package.json
client/public/: index.html  manifest.json
client/src/: App.js
client/src/Components/FileList/: index-bk.js  index.js  listEntry.js
client/src/Components/FileUploader/: index.js
client/src/Components/FileUploader/dropzone/: Dropzone.js
client/src/Components/FileUploader/upload/: Upload.js
client/src/Components/Stage/: index-bk.js  index.js
client/src/Components/Table/: index.js
client/src/Components/VideoView/: index.js
client/src/Components/card/: info.js
client/src/Configs/Constants/: UploadDestinationOptions.json  api.json  server_constants.json
client/src/Configs/Routes/: public.json
client/src/Controls/: AutocompleteTextBox.js  Select.js
client/src/Css/: App.css
client/src/Pages/Home/: index.js
client/src/Pages/ImageMatch/: index-bk.js  index.js
client/src/Pages/VideoMatch/: index.js
client/src/_locale/: en.json  ru.json
client/src/utilities/: text.js
facetools/: carve_faces.py  watch.py
rest/: Stream.js  helpers.js
rest/metrics/: index.js  overall.json
utils/: carve.py  carve_cnn_dlib.py  carve_hog_lsvm_dlib.py  carve_hog_lsvm_dlib_bk.py  compare_faces.py  get_image_sizes.py  plot_pair.py  video-to-frames.py
